--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,11 @@ a {
     margin-top: 50px;
     align-items: center;
     justify-content: center;
+    background: url(./images/pexels-as-kacar-11002226.jpg);
+    background-size: 100%;
     min-width: 300px;
-    max-height: 200px;
+    min-height: 300px;
+    border-radius: 15px;
 }
 
 .header-section {
@@ -61,6 +64,7 @@ a {
 
 .intro-section {
     display: flex;
+    align-items: center;
     gap: 35px;
     padding: 100px;
 }
@@ -70,37 +74,47 @@ a {
     padding: 5px 15px;
     border-radius: 10px;
     border: #1f2937;
+    font-size: large;
 }
 
-.sign-up #white-border {
-    border: white;
+#white-border {
+    border: 2px solid white;
+    background-color: #3882f6;
+    padding: 5px 15px;
+    border-radius: 10px;
+    color: white;
+    font-size: large;
 }
 
 .mid-title {
     text-align: center;
     padding: 32px;
     background-color: white;
-    margin-bottom: -10px;
+    margin-bottom: -30px;
 }
 
 .info-section {
     display: flex;
     background-color: white;
+    gap: 40px;
+    align-items: center;
+    justify-content: center;
     padding: 100px;
-    gap: 25px;
 }
 
 .info-boxes {
     display: flex;
     flex-direction: column;
     text-align: center;
+    flex: 0 0 0;
 }
 
 .info-image {
+    display: flex;
     border: 5px solid #3882f6;;
     border-radius: 15px;
-    min-width: 100px;
-    min-height: 100px;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 .quote-section {
